--- a/template.yaml
+++ b/template.yaml
@@ -26,15 +26,17 @@ Resources:
       Architectures:
       - x86_64
       Events:
-        SMS:
+        Default:
           Type: Api
           Properties:
-            Path: /hello
+            Path: /default
             Method: get
-          # Type: Api
-          # Properties:
-          #   Path: /info
-          #   Method: get
+        PostCheck:
+          Type: Api
+          Properties:
+            Path: /post-check
+            Method: post
+
     Metadata: # Manage esbuild properties
       BuildMethod: esbuild
       BuildProperties:
@@ -49,11 +51,11 @@ Outputs:
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
   SMSApi:
-    Description: API Gateway endpoint URL for Prod stage for Hello World function
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
+    Description: API Gateway endpoint URL for Prod stage for SMS function
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/"
   SMSFunction:
-    Description: Hello World Lambda Function ARN
+    Description: SMS Lambda Function ARN
     Value: !GetAtt SMSFunction.Arn
   SMSFunctionIamRole:
-    Description: Implicit IAM Role created for Hello World function
+    Description: Implicit IAM Role created for SMS function
     Value: !GetAtt SMSFunctionRole.Arn
