--- a/user-backend/package.json
+++ b/user-backend/package.json
@@ -14,7 +14,8 @@
     "@aws-sdk/client-dynamodb": "^3.828.0",
     "@aws-sdk/lib-dynamodb": "^3.828.0",
     "aws-lambda": "^1.0.7",
-    "esbuild": "^0.14.14"
+    "esbuild": "^0.14.14",
+    "lambda-api": "^1.2.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.2.0",
