--- a/user-backend/package.json
+++ b/user-backend/package.json
@@ -11,6 +11,7 @@
     "test": "npm run compile && npm run unit"
   },
   "dependencies": {
+    "@aws-lambda-powertools/logger": "^2.21.0",
     "@aws-sdk/client-dynamodb": "^3.828.0",
     "@aws-sdk/lib-dynamodb": "^3.828.0",
     "aws-lambda": "^1.0.7",
